diable axi spi and axi i2c for PL GPIO

--- a/arch/arm/boot/dts/zynq-pluto-sdr-revc.dts
+++ b/arch/arm/boot/dts/zynq-pluto-sdr-revc.dts
@@ -46,6 +46,7 @@
 		reg = <0x7C430000 0x10000>;
 		xlnx,num-ss-bits = <0x1>;
 		xlnx,spi-mode = <0>;
+		status = "disable";
 
 		spidev0: spidev@0 {
 			compatible = "adi,swspi";
